# hrd_first_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hrd_first_project.md  hrd_first_project_technical_report_and_gamma_prompt.md  note.md  technical_report_final.md
DS/queue/myqueue1/: CMakeLists.txt  main.c  queue1.c
DS/queue/myqueue2/: CMakeLists.txt
DS/queue/myqueue3/: CMakeLists.txt
DS/stack/: stack.c
DS/stack/mystack1/: main.c  stack.c
DS/stack/mystack2/: stack2.c
DS/stack/mystack3/: main.c  stack3.h
HomeStudy/part1/: No1.c  No2.c  no10.c  no11.c  no12.c  no13.c  no14.c  no15.c  no16.c  no17.c  no18.c  no19.c  no20.c  no21.c  no22.c  no23.c  no25.c  no26.c  no27.c  no28.c  no29.c  no3.c  no30.c  no31.c  no32.c  no33.c  no34.c  no35.c  no36.c  no37.c  no38.c  no39.c  no4.c  no40.c  no41.c  no42.c  no43.c  no44.c  no45.c  no46.c  (+5 more)
Network/: CMakeLists.txt  mqttPub.c  mqttPub3.c
PG/Bowling/: Bowling1.c  Bowling1.h  CMakeLists.txt  main.c
PG/Bowling/Bowling2/: CMakeLists.txt
PICO/: CMakeLists.txt
PICO/src/: blink.c  buzzer.c  hello.c
PICO/tools/: bin_to_uf2.py
atmega128/: CMakeLists.txt  Makefile
atmega128/lib/lcd/: lcd.c
atmega128/lib/sht20/: SHT2x.h  TWI_driver.c
atmega128/lib/uart0/: uart0.c
atmega128/src/: cds2.c  dc_motor.c  dc_pwm.c  dc_pwm_vr.c  external_eeprom.c  fnd2.c  i2c_tempHumi.c  lcd1.c  led2.c  led3.c  led4.c  main.c  pir.c  pwmbuzz.c  pwmsServoSwitch.c  pwmservo.c  qwmled.c  switch1.c  switch2.c  switch_fnd.c  timer2led.c
c_example/part4/baseballGame/: baseballGame.c  baseballGame.h  main.c
c_example/part5/: chargetput.c  chargetput2.c  chargetput3.c  chargetput4.c  enum.c  selfreference.c  string.c  string3.c  struct.c  struct2.c  structarry.c  union.c
c_example/part5/date/: date.c  date.h  main.c
c_example/part5/twodouble/: CMakeLists.txt  main.c  twodouble.c  twodouble.h
c_example/part6/: VLA.c  dynamicallocation.c  dynamicallocation2.c  dynamicallocation3.c  dynamicallocation4.c  filedescript.c  filepointer.c
c_example/part6/scoreProcess/: main.c
doc/: 1차_3조_프로젝트_계획서.hwp  발표_스크립트.md
doc/records/: node_c_handover_log.md  node_c_test_report.md
doc/reference/: gamma_ppt_prompt.md
doc/문서/: smart_environment_house_plan.md
node_a/: README.md
node_a/pico/: CMakeLists.txt  lwipopts.h
node_a/pico/include/: node_a_config.h
node_a/pico/src/: project0.c
node_b/: CMakeLists.txt  README.md  lwipopts.h
node_b/docs/: mqtt_examples.md  node_c_checklist.md  notes.md  tempservo_led_node_c_integration.md
node_b/include/: node_b.h  node_b_config.h  tempservo_led_contract.h
node_b/src/: main.c  temp.c  tempservo_led.c  ultra.c
node_c/: CMakeLists.txt  README.md  lwipopts.h  node_c.uf2  node_c_handover_log.md  node_c_test_report.md
node_c/include/: node_c_config.h  node_c_controller.h  node_c_network.h
node_c/src/: main.c  node_c_controller.c  node_c_network.c
node_c/tests/: controller_smoke_test.c
web_console/: README.md  app.py  requirements.txt
web_console/static/: app.js  style.css
web_console/templates/: index.html
